扩展用户模型字段；
